--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-sm col-md flex-first">
                 <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine
+                <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine
                     cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
             </div>
         </div>
@@ -47,7 +47,7 @@
             </div>
             <div class="col-sm col-md">
                 <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
+                <p class="hidden-xs-down"> Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
                     main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
                     person </p>
             </div>
@@ -60,13 +60,13 @@
             <div class="col-sm col-md flex-first">
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who
+                <p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who
                     in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
             </div>
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-5 offset-1 col-sm-2">
@@ -84,8 +84,8 @@
                         121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br> Tel.: +852 1234 5678<br>                        Fax: +852 8765 4321<br> Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div class="col col-sm-4 align-self-center social-media">
-                    <div>
+                <div class="col col-sm-4 align-self-center">
+                    <div class="social-media">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
