--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking
                         creations will tickle your culinary senses!</p>
@@ -28,17 +28,36 @@
             </div>
         </div>
     </header>
-
+    <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="./aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col">
                 <h3>About Us</h3>
                 <hr>
             </div>
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active">About Us</li>
+            </ol>
         </div>
 
         <div class="row row-content">
-            <div class="col-sm-6 col-12">
+            <div class="col-sm-6 col">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong
                     Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage
@@ -53,7 +72,7 @@
 
 
         <div class="row row-content">
-            <div class="col-12">
+            <div class="col">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p class="hidden-xs-down">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to
