--- a/contactus.html
+++ b/contactus.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
-        <div class="container">
+        <div class="container m-0">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
