--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
-        <div class="container">
+        <div class="container m-0">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
