--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
                             $19.99 per person </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand Buffet">
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand Buffet">
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                     <div class="card-block">
                         <form action="">
                             <div class="form-group row">
-                                <div class="col">Number of guests</div>
+                                <label for="numberOfGuests" class="col col-form-label">Number of guests</label >
                                 <div class="col-12 col-sm-10">
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
@@ -150,9 +150,8 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <div class="col">Date and time</div>
+                                <label class="col col-form-label">Date and time</label>
                                 <div class="col-12 col-sm-5">
-                                    <label class="sr-only" for="inlineFormInputGroup">Date</label>
                                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                         <div class="input-group-addon">
                                             <span class="fa fa-calendar"></span>
@@ -161,7 +160,6 @@
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-5">
-                                    <label class="sr-only" for="inlineFormInputGroup">Time</label>
                                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                         <div class="input-group-addon">
                                             <span class="fa fa-clock-o"></span>
