--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
             </button>
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                        <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login</a>
+                </span>
             </div>
         </div>
     </nav>
@@ -46,7 +50,8 @@
                             <img src="img/logo.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-6">
-                            <a href="#reserveTable" class="btn btn-sm btn-block btn-warning">Reserve table</a>
+                            <a data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom"
+                                href="#reserveTable" class="btn btn-warning btn-sm btn-block">Reserve table</a>
                         </div>
                     </div>
                 </div>
@@ -121,65 +126,65 @@
                                         <label class="form-check-label">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
                                                 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
                                                 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline disabled">
-                                        <label class="form-check-label">
+                            </div>
+                            <div class="form-check form-check-inline disabled">
+                                <label class="form-check-label">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
                                                 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4"> 4
                                                 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label">
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5"> 5
                                                 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline disabled">
-                                        <label class="form-check-label">
+                            </div>
+                            <div class="form-check form-check-inline disabled">
+                                <label class="form-check-label">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6"> 6
                                                 </label>
-                                    </div>
-                                </div>
                             </div>
-                            <div class="form-group row">
-                                <label class="col col-form-label">Date and time</label>
-                                <div class="col-12 col-sm-5">
-                                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                        <div class="input-group-addon">
-                                            <span class="fa fa-calendar"></span>
-                                        </div>
-                                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Date">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-5">
-                                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                        <div class="input-group-addon">
-                                            <span class="fa fa-clock-o"></span>
-                                        </div>
-                                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Time">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col"></div>
-                                <div class="col-12 col-sm-10">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label class="col col-form-label">Date and time</label>
+                    <div class="col-12 col-sm-5">
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon">
+                                <span class="fa fa-calendar"></span>
+                            </div>
+                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Date">
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-5">
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon">
+                                <span class="fa fa-clock-o"></span>
+                            </div>
+                            <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Time">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col"></div>
+                    <div class="col-12 col-sm-10">
+                        <button type="submit" class="btn btn-primary">Reserve</button>
+                    </div>
+                </div>
+                </form>
             </div>
-            <div class="col-sm"></div>
         </div>
+    </div>
+    <div class="col-sm"></div>
+    </div>
     </div>
 
     <footer class="footer">
@@ -222,10 +227,49 @@
             </div>
         </div>
     </footer>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                            <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputPassword3">Password</label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox"> Remember me
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
