--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			<div class="row row-header">
 				<div class="col-12 col-sm-6">
 					<h1>Ristorante con Fusion</h1>
-					<p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking
-						creations will tickle your culinary senses!</p>
+					<p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
+						will tickle your culinary senses!</p>
 				</div>
 				<div class="col col-sm align-self-center">
 					<div class="row  align-items-center">
@@ -66,17 +66,16 @@
 							<img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
 							<div class="carousel-caption d-none d-md-block">
 								<h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-								<p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
-									olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+								<p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
+									tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<img class="d-block img-fluid" src="img/buffet.png" alt="Uthappizza">
 							<div class="carousel-caption d-none d-md-block">
 								<h2>Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
-								<p class="hidden-xs-down"> Featuring mouthwatering combinations with a choice of five different salads, six enticing
-									appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft
-									drinks. All for just $19.99 per person </p>
+								<p class="hidden-xs-down"> Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
+									and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
 							</div>
 						</div>
 						<div class="carousel-item">
@@ -84,9 +83,8 @@
 							<div class="carousel-caption d-none d-md-block">
 								<h2 class="mt-0">Alberto Somayya</h2>
 								<h4>Executive Chef</h4>
-								<p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely
-									with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian
-									fusion experiences.
+								<p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in
+									the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.
 								</p>
 							</div>
 						</div>
@@ -102,6 +100,9 @@
 					<a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
 							<span class="carousel-control-next-icon"></span>
 						</a>
+					<button class="btn btn-danger btn-sm" id="carousel-button">
+						<span id="carousel-button-icon" class="fa fa-pause"></span>
+					</button>
 				</div>
 			</div>
 		</div>
@@ -114,8 +115,8 @@
 					<img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
 					<div class="media-body">
 						<h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-default">$4.99</span></h2>
-						<p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
-							ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+						<p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
+							tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
 					</div>
 				</div>
 			</div>
@@ -130,9 +131,8 @@
 				<div class="media">
 					<div class="media-body">
 						<h2>Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
-						<p class="hidden-xs-down"> Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
-							six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-							$19.99 per person </p>
+						<p class="hidden-xs-down"> Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
+							and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
 					</div>
 					<img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand Buffet">
 				</div>
@@ -149,9 +149,8 @@
 					<div class="media-body">
 						<h2 class="mt-0">Alberto Somayya</h2>
 						<h4>Executive Chef</h4>
-						<p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with
-							whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
-							experiences.
+						<p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the
+							culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.
 						</p>
 					</div>
 				</div>
@@ -174,8 +173,9 @@
 				<div class="col-6 col-sm-5">
 					<h5>Our Address</h5>
 					<address>
-						121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br> <i class="fa fa-phone fa-lg"></i>:
-						+852 1234 5678<br>
+						121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br> <i class="fa fa-phone fa-lg"></i>: +852 1234
+						5678
+						<br>
 						<i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
 						<i class="fa fa-envelope fa-lg"></i>:
 						<a href="mailto:confusion@food.net">confusion@food.net</a>
@@ -329,7 +329,20 @@
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function () {
-			$().button('toggle')
+			$().button('toggle');
+			$("#mycarousel").carousel({ interval: 2000 });
+			$("#carousel-button").click(function(){
+                if ($("#carousel-button").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carousel-button").children("span").removeClass('fa-pause');
+                    $("#carousel-button").children("span").addClass('fa-play');
+                }
+                else if ($("#carousel-button").children("span").hasClass('fa-play')){
+                    $("#mycarousel").carousel('cycle');
+                    $("#carousel-button").children("span").removeClass('fa-play');
+                    $("#carousel-button").children("span").addClass('fa-pause');                    
+                }
+            });
 		});
 	</script>
 </body>
