--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<!-- build:css css/main.css -->
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-flex.min.css">
 	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap-social.css">
 	<link href="css/styles.css" rel="stylesheet">
+	<!-- endbuild -->
 	<title>Ristorante Con Fusion</title>
 </head>
 
@@ -164,10 +166,10 @@
 				<div class="col-5 offset-1 col-sm-2">
 					<h5>Links</h5>
 					<ul class="list-unstyled">
-						<li><a href="href=" ./index.html "">Home</a></li>
-						<li><a href="href=" ./aboutus.html "">About</a></li>
+						<li><a href=" ./index.html">Home</a></li>
+						<li><a href=" ./aboutus.html ">About</a></li>
 						<li><a href="#">Menu</a></li>
-						<li><a href="href=" ./contactus.html "">Contact</a></li>
+						<li><a href=" ./contactus.html ">Contact</a></li>
 					</ul>
 				</div>
 				<div class="col-6 col-sm-5">
@@ -324,10 +326,12 @@
 	</div>
 
 	<!-- jQuery first, then Tether, then Bootstrap JS. -->
+	<!-- build:js js/main.js -->
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/tether/dist/js/tether.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="js/scripts.js"></script>
+	<!-- endbuild -->
 </body>
 
 </html>
